--- a/basic_version_wip_R13.ipynb
+++ b/basic_version_wip_R13.ipynb
@@ -15184,15 +15184,15 @@
         "id": "B04Ue7rUrP7C"
       },
       "source": [
-        "| Home team | Away Team | Venue |Favorite (Herald-Sun) | Location advantage |\n",
-        "| :--- | :--- | :--- | :--- | :--- |\n",
-        "|Port Adelaide|Geelong|Adelaide Oval|||\n",
-        "|Sydney|Hawthorn|S.C.G.|||\n",
-        "|Fremantle|Gold Coast|Perth Stadium|||\n",
-        "|St Kilda|Adelaide|TBA|||\n",
-        "|North Melbourne|GWS Giants|Bellerive Oval (Hobart)|||\n",
-        "|West Coast|Richmond|Perth Stadium|||\n",
-        "|Melbourne|Collingwood|S.C.G.|||"
+        "| Home team | Away Team | Venue |Location advantage |\n",
+        "| :--- | :--- | :--- | :--- |\n",
+        "|Port Adelaide|Geelong|Adelaide Oval|yes|\n",
+        "|Sydney|Hawthorn|S.C.G.|yes|\n",
+        "|Fremantle|Gold Coast|Perth Stadium|yes|\n",
+        "|St Kilda|Adelaide|TBA|no*|\n",
+        "|North Melbourne|GWS Giants|Bellerive Oval (Hobart)|no|\n",
+        "|West Coast|Richmond|Perth Stadium|yes|\n",
+        "|Melbourne|Collingwood|S.C.G.|no|"
       ]
     },
     {
@@ -15227,30 +15227,369 @@
         "# Add the actuals (results from R12):\n",
         "rframe['actual_n1'] = quick_results_check['actual']"
       ],
-      "execution_count": 163,
+      "execution_count": 164,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "flHOsD84oVAD"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 421
+        },
+        "id": "flHOsD84oVAD",
+        "outputId": "e35afdad-ae66-4649-c305-57f3fdbf101b"
       },
       "source": [
         "# Update column names for current week\n",
-        "# rframe.columns = ['team','seq','win_prob_n1','rating_n2','actual_n1']\n"
+        "rframe.columns = ['team','seq','win_prob_n1','rating_n2','actual_n1']\n",
+        "rframe"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 165,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>team</th>\n",
+              "      <th>seq</th>\n",
+              "      <th>win_prob_n1</th>\n",
+              "      <th>rating_n2</th>\n",
+              "      <th>actual_n1</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>ADL</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.552</td>\n",
+              "      <td>1472.9</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>BRI</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0.463</td>\n",
+              "      <td>1549.9</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>CAR</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0.456</td>\n",
+              "      <td>1475.3</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>COL</td>\n",
+              "      <td>4</td>\n",
+              "      <td>0.448</td>\n",
+              "      <td>1436.7</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>ESS</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0.472</td>\n",
+              "      <td>1493.2</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>FRE</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0.402</td>\n",
+              "      <td>1489.7</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>MEL</td>\n",
+              "      <td>11</td>\n",
+              "      <td>0.537</td>\n",
+              "      <td>1576.0</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>RIC</td>\n",
+              "      <td>14</td>\n",
+              "      <td>0.528</td>\n",
+              "      <td>1512.4</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>STK</td>\n",
+              "      <td>15</td>\n",
+              "      <td>0.455</td>\n",
+              "      <td>1491.7</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>SYD</td>\n",
+              "      <td>16</td>\n",
+              "      <td>0.545</td>\n",
+              "      <td>1523.3</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>WBD</td>\n",
+              "      <td>17</td>\n",
+              "      <td>0.598</td>\n",
+              "      <td>1559.0</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>WCE</td>\n",
+              "      <td>18</td>\n",
+              "      <td>0.544</td>\n",
+              "      <td>1505.7</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   team  seq  win_prob_n1  rating_n2  actual_n1\n",
+              "0   ADL    1        0.552     1472.9          0\n",
+              "1   BRI    2        0.463     1549.9          0\n",
+              "2   CAR    3        0.456     1475.3          0\n",
+              "3   COL    4        0.448     1436.7          1\n",
+              "4   ESS    5        0.472     1493.2          0\n",
+              "5   FRE    6        0.402     1489.7          0\n",
+              "6   MEL   11        0.537     1576.0          1\n",
+              "7   RIC   14        0.528     1512.4          1\n",
+              "8   STK   15        0.455     1491.7          0\n",
+              "9   SYD   16        0.545     1523.3          1\n",
+              "10  WBD   17        0.598     1559.0          1\n",
+              "11  WCE   18        0.544     1505.7          1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 165
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gnLyYOy6pioq"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 421
+        },
+        "id": "gnLyYOy6pioq",
+        "outputId": "64b1a617-3571-4e66-95a5-8c6b663a10c5"
       },
       "source": [
         "# Generate new ratings\n",
-        "#rframe['rating_n1'] = round(rframe['rating_n2'] + (20*(rframe['actual_n1'] - rframe['win_prob_n1'])),ndigits = 1)\n",
-        "#rframe"
+        "rframe['rating_n1'] = round(rframe['rating_n2'] + (20*(rframe['actual_n1'] - rframe['win_prob_n1'])),ndigits = 1)\n",
+        "rframe"
+      ],
+      "execution_count": 166,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>team</th>\n",
+              "      <th>seq</th>\n",
+              "      <th>win_prob_n1</th>\n",
+              "      <th>rating_n2</th>\n",
+              "      <th>actual_n1</th>\n",
+              "      <th>rating_n1</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>ADL</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.552</td>\n",
+              "      <td>1472.9</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1461.9</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>BRI</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0.463</td>\n",
+              "      <td>1549.9</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1540.6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>CAR</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0.456</td>\n",
+              "      <td>1475.3</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1466.2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>COL</td>\n",
+              "      <td>4</td>\n",
+              "      <td>0.448</td>\n",
+              "      <td>1436.7</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1447.7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>ESS</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0.472</td>\n",
+              "      <td>1493.2</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1483.8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>FRE</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0.402</td>\n",
+              "      <td>1489.7</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1481.7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>MEL</td>\n",
+              "      <td>11</td>\n",
+              "      <td>0.537</td>\n",
+              "      <td>1576.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1585.3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>RIC</td>\n",
+              "      <td>14</td>\n",
+              "      <td>0.528</td>\n",
+              "      <td>1512.4</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1521.8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>STK</td>\n",
+              "      <td>15</td>\n",
+              "      <td>0.455</td>\n",
+              "      <td>1491.7</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1482.6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>SYD</td>\n",
+              "      <td>16</td>\n",
+              "      <td>0.545</td>\n",
+              "      <td>1523.3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1532.4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>WBD</td>\n",
+              "      <td>17</td>\n",
+              "      <td>0.598</td>\n",
+              "      <td>1559.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1567.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>WCE</td>\n",
+              "      <td>18</td>\n",
+              "      <td>0.544</td>\n",
+              "      <td>1505.7</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1514.8</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   team  seq  win_prob_n1  rating_n2  actual_n1  rating_n1\n",
+              "0   ADL    1        0.552     1472.9          0     1461.9\n",
+              "1   BRI    2        0.463     1549.9          0     1540.6\n",
+              "2   CAR    3        0.456     1475.3          0     1466.2\n",
+              "3   COL    4        0.448     1436.7          1     1447.7\n",
+              "4   ESS    5        0.472     1493.2          0     1483.8\n",
+              "5   FRE    6        0.402     1489.7          0     1481.7\n",
+              "6   MEL   11        0.537     1576.0          1     1585.3\n",
+              "7   RIC   14        0.528     1512.4          1     1521.8\n",
+              "8   STK   15        0.455     1491.7          0     1482.6\n",
+              "9   SYD   16        0.545     1523.3          1     1532.4\n",
+              "10  WBD   17        0.598     1559.0          1     1567.0\n",
+              "11  WCE   18        0.544     1505.7          1     1514.8"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 166
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5ZLD6qyL5rM0"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
