--- a/basic_version_during_R13.ipynb
+++ b/basic_version_during_R13.ipynb
@@ -16623,10 +16623,10 @@
       "source": [
         "| Home team | Away Team | Venue |Location advantage |Elo pred. winner |Elo win prob |Winner & margin|Elo correct|\n",
         "| :--- | :--- | :--- | :--- | :--- | :--- | :--- | :--- |\n",
-        "|Port Adelaide|Geelong|Adelaide Oval|yes|PAD|0.524|GEE|no|\n",
-        "|Sydney|Hawthorn|S.C.G.|yes|SYD|0.638|HAW|no|\n",
-        "|Fremantle|Gold Coast|Perth Stadium|yes|FRE|0.510|FRE|yes|\n",
-        "|St Kilda|Adelaide|Cazaly's Stadium (Cairns)|no|STK|0.530|ADL|no|\n",
+        "|Port Adelaide|Geelong|Adelaide Oval|yes|PAD|0.524|GEE (21)|no|\n",
+        "|Sydney|Hawthorn|S.C.G.|yes|SYD|0.638|HAW (38)|no|\n",
+        "|Fremantle|Gold Coast|Perth Stadium|yes|FRE|0.510|FRE (27) |yes|\n",
+        "|St Kilda|Adelaide|Cazaly's Stadium (Cairns)|no|STK|0.530|ADL (6)|no|\n",
         "|North Melbourne|GWS Giants|Bellerive Oval (Hobart)|no|GWS|0.631|||\n",
         "|West Coast|Richmond|Perth Stadium|yes|RIC|0.510|||\n",
         "|Melbourne|Collingwood|S.C.G.|no|MEL|0.688|||"
