--- a/basic_version_R15.ipynb
+++ b/basic_version_R15.ipynb
@@ -20303,7 +20303,7 @@
         "#quick_results_check['actual'] = ['adl','bri','car','col','ess','fre','gee','gcs','gws','haw','mel','nme','pad','ric','stk','syd','wbd','wce']\n",
         "# order as above in joined\n",
         "## Uncomment the following lines after results entered:\n",
-        "#quick_results_check['actual'] = ['adl',1,'car','col','ess','fre',0,'gcs','gws','haw','mel','nme','pad','ric','stk','syd','wbd','wce']\n",
+        "#quick_results_check['actual'] = ['adl',1,'car','col','ess','fre',0,'gcs','gws','haw','mel','nme','pad',0,1,'syd','wbd','wce']\n",
         "#quick_results_check.columns = ['team','seq','win_prob','actual']\n",
         "#quick_results_check"
       ],
@@ -20329,8 +20329,8 @@
       "source": [
         "| Home team | Away Team | Venue |Location advantage | Herald-Sun favorite|Elo pred. winner|Elo win prob|Winner & margin|Elo correct|\n",
         "| :--- | :--- | :--- | :--- |:---|:--- | :--- | :--- |:---|\n",
-        "|Brisbane|Geelong|GABBA|yes|BRI|GEE|0.527|BRI|no|\n",
-        "|Richmond|StKilda|MCG|no|RIC|RIC|0.557|STK|no|\n",
+        "|Brisbane|Geelong|GABBA|yes|BRI|GEE|0.527|BRI (44)|no|\n",
+        "|Richmond|StKilda|MCG|no|RIC|RIC|0.557|STK (40)|no|\n",
         "|Collingwood|Fremantle|Docklands|yes|COL|FRE|0.543|||\n",
         "|North Melbourne|Gold Coast|Tasmania|no|NME|GCS|0.583|||\n",
         "|Port Adelaide|Sydney|Adelaide Oval|yes|PAD|PAD|0.556|||\n",
