--- a/basic_version_R15.ipynb
+++ b/basic_version_R15.ipynb
@@ -20295,7 +20295,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "77v9y6dJHyfJ"
+        "id": "77v9y6dJHyfJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 607
+        },
+        "outputId": "255507ea-f945-477f-9f6d-b875085a05d5"
       },
       "source": [
         "## POST-ROUND\n",
@@ -20303,12 +20308,199 @@
         "#quick_results_check['actual'] = ['adl','bri','car','col','ess','fre','gee','gcs','gws','haw','mel','nme','pad','ric','stk','syd','wbd','wce']\n",
         "# order as above in joined\n",
         "## Uncomment the following lines after results entered:\n",
-        "#quick_results_check['actual'] = ['adl',1,'car',0,'ess',1,0,0,'gws','haw','mel',1,'pad',0,1,'syd','wbd','wce']\n",
-        "#quick_results_check.columns = ['team','seq','win_prob','actual']\n",
-        "#quick_results_check"
+        "quick_results_check['actual'] = [0,1,1,0,0,1,0,0,0,1,1,1,1,0,1,0,1,0]\n",
+        "quick_results_check.columns = ['team','seq','win_prob','actual']\n",
+        "quick_results_check"
       ],
-      "execution_count": 202,
-      "outputs": []
+      "execution_count": 203,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>team</th>\n",
+              "      <th>seq</th>\n",
+              "      <th>win_prob</th>\n",
+              "      <th>actual</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>ADL</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.522</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>BRI</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0.473</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>CAR</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0.478</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>COL</td>\n",
+              "      <td>4</td>\n",
+              "      <td>0.457</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>ESS</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0.389</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>FRE</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0.543</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>GEE</td>\n",
+              "      <td>7</td>\n",
+              "      <td>0.527</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>GCS</td>\n",
+              "      <td>8</td>\n",
+              "      <td>0.583</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>GWS</td>\n",
+              "      <td>9</td>\n",
+              "      <td>0.593</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>HAW</td>\n",
+              "      <td>10</td>\n",
+              "      <td>0.407</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>MEL</td>\n",
+              "      <td>11</td>\n",
+              "      <td>0.611</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>NME</td>\n",
+              "      <td>12</td>\n",
+              "      <td>0.417</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>PAD</td>\n",
+              "      <td>13</td>\n",
+              "      <td>0.556</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>RIC</td>\n",
+              "      <td>14</td>\n",
+              "      <td>0.557</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>STK</td>\n",
+              "      <td>15</td>\n",
+              "      <td>0.443</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15</th>\n",
+              "      <td>SYD</td>\n",
+              "      <td>16</td>\n",
+              "      <td>0.444</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16</th>\n",
+              "      <td>WBD</td>\n",
+              "      <td>17</td>\n",
+              "      <td>0.545</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17</th>\n",
+              "      <td>WCE</td>\n",
+              "      <td>18</td>\n",
+              "      <td>0.455</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   team  seq  win_prob  actual\n",
+              "0   ADL    1     0.522       0\n",
+              "1   BRI    2     0.473       1\n",
+              "2   CAR    3     0.478       1\n",
+              "3   COL    4     0.457       0\n",
+              "4   ESS    5     0.389       0\n",
+              "5   FRE    6     0.543       1\n",
+              "6   GEE    7     0.527       0\n",
+              "7   GCS    8     0.583       0\n",
+              "8   GWS    9     0.593       0\n",
+              "9   HAW   10     0.407       1\n",
+              "10  MEL   11     0.611       1\n",
+              "11  NME   12     0.417       1\n",
+              "12  PAD   13     0.556       1\n",
+              "13  RIC   14     0.557       0\n",
+              "14  STK   15     0.443       1\n",
+              "15  SYD   16     0.444       0\n",
+              "16  WBD   17     0.545       1\n",
+              "17  WCE   18     0.455       0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 203
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -20325,8 +20517,8 @@
         "|Port Adelaide|Sydney|Adelaide Oval|yes|PAD|PAD|PAD|0.556|PAD (10)|yes|\n",
         "|Essendon|Melbourne|MCG|no|MEL|MEL|MEL|0.611|MEL (11)|yes|\n",
         "|GWS Giants|Hawthorn|MCG|no|GWS|GWS|GWS|0.593|HAW (18)|no|\n",
-        "|West Coast|Western Bulldogs|Perth Stadium|yes|WCE|WBD|WBD|0.545|||\n",
-        "|Carlton|Adelaide|Docklands Stadium|yes|CAR|ADL|ADL|0.522|||"
+        "|West Coast|Western Bulldogs|Perth Stadium|yes|WCE|WBD|WBD|0.545|WBD (55)|yes|\n",
+        "|Carlton|Adelaide|Docklands Stadium|yes|CAR|ADL|ADL|0.522|CAR (10)|no|"
       ]
     },
     {
