--- a/basic_version_R15.ipynb
+++ b/basic_version_R15.ipynb
@@ -20527,9 +20527,57 @@
         "id": "kvy2VXV1ZPTM"
       },
       "source": [
+        "qrc = quick_results_check\n",
+        "qrc['fav_calc'] = (qrc['win_prob'] * qrc['actual'])\n",
+        "# subset rows for fav_calc > 0.5 then sum 'actual' to get correct preds\n",
+        "played = qrc['actual'].sum()"
+      ],
+      "execution_count": 204,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TDoLe1iA1kUH",
+        "outputId": "93ecf9a9-9874-41a2-903c-b9cf9048222f"
+      },
+      "source": [
+        "win_correct = qrc[qrc['fav_calc'] > 0.5]\n",
+        "yep = win_correct['actual'].sum()\n",
+        "print('The Elo predictions were correct for %d out of the %d matches' % (yep, played) )"
+      ],
+      "execution_count": 205,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The Elo predictions were correct for 4 out of the 9 matches\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fpe_lInk1yQw"
+      },
+      "source": [
+        "## **Week 16**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Zk_vpHXG1y5I"
+      },
+      "source": [
         ""
       ],
-      "execution_count": 202,
+      "execution_count": null,
       "outputs": []
     }
   ]
